# TikFetchBot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.bat  build.sh  config.yml  docker-compose.yml
.github/workflows/: main.yml  rust.yml
src/: bot.rs  data.rs  database.rs  fetcher.rs  logger.rs  main.rs  media_fetcher.rs  pair.rs  parser.rs
