[package]
name = "ttdownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.138"
teloxide = { version = "0.15.0"}
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.1"
colored = "3.0.0"
